Set up login and register page mapping, server side form validation. Began initial setup of Spring Security: - config file - added password encoder to the user form bean - adapted login.jsp to accept Spring Security naming conventions

--- a/src/main/webapp/pub/css/global.css
+++ b/src/main/webapp/pub/css/global.css
@@ -124,3 +124,8 @@ body {
 .title-link:hover {
     color: inherit;
 }
+.text-danger {
+    margin-top: -8px;
+    margin-bottom: 0;
+    padding: 0;
+}
