--- a/src/main/webapp/pub/css/global.css
+++ b/src/main/webapp/pub/css/global.css
@@ -142,9 +142,19 @@ body {
     margin-right: auto;
 }
 
-.beta-header {
-    cursor: pointer;
-    display: inline-block;
+.btn-black {
+    background-color: black !important;
+    color: white !important;
+    border: none !important;
+    border-radius: 0 !important; /* 90-degree corners */
+    font-family: Helvetica, Arial, sans-serif !important; /* Helvetica font */
+    font-size: 1.25rem !important; /* Same size as <h3> */
+    padding: 0.25rem 0.75rem !important; /* Padding for the button */
+}
+
+.btn-black:hover {
+    background-color: #333 !important;
+    color: white !important;
 }
 
 .boulder-image {
@@ -167,7 +177,9 @@ body {
 .boulder-placeholder-container {
     flex: 1 0 45%; /* Flex-grow, flex-shrink, flex-basis */
     margin: 5px; /* Add margin for padding between images */
+    padding-bottom: 20px;
     height: 100%;
+    position: relative;
 }
 
 .boulder-placeholder {
@@ -186,27 +198,23 @@ body {
 
 .scroll-button {
     position: absolute;
-    top: 65%;
+    top: 50%; /* Start at the middle */
     transform: translateY(-50%);
     background-color: transparent;
     color: black;
     border: none;
-    font-size: 25px; /* Adjust size as needed */
+    font-size: 20px; /* Adjust size as needed */
     cursor: pointer;
     z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 30px; /* Adjust size as needed */
-    height: 30px; /* Adjust size as needed */
+    width: 40px; /* Adjust size as needed */
+    height: 40px; /* Adjust size as needed */
 }
 
 .scroll-button.left {
-    left: -9px; /* Adjust to ensure it's clickable */
-}
-
-.scroll-button.right {
-    right: 0;
+    left: -20px; /* Adjust to ensure it's clickable */
 }
 
 .hidden {
@@ -244,6 +252,11 @@ body {
     cursor: pointer;
 }
 
-.hidden {
-    display: none;
+#placeholderContainer {
+    padding-left: 5px; /* Adjust this value to move the images to the right */
+    overflow: visible; /* Allow content to bleed out */
+}
+
+.container {
+    overflow: visible; /* Ensure parent container allows overflow */
 }
