--- a/src/main/webapp/pub/css/global.css
+++ b/src/main/webapp/pub/css/global.css
@@ -79,6 +79,7 @@ body {
     background: rgba(255, 255, 255, 0.9);
     padding: 20px;
     margin-top: 50px;
+    margin-bottom: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 700px;
     width: 100%;
