changed the index page featured climb containers to a static size

--- a/src/main/webapp/pub/css/global.css
+++ b/src/main/webapp/pub/css/global.css
@@ -28,6 +28,8 @@ body {
     padding: 10px;
     margin: 10px 0;
     position: relative;
+    height: 550px;
+    overflow: hidden;
 }
 .flex-box a {
     display: block;
